# larksh

./: .gitignore  Makefile  README.md  install.sh  larksh-client  main.py  pyproject.toml  requirements.txt
bot/: dispatcher.py  listener.py
deploy/: config.example.yaml
dist-files/: config.example.yaml  larksh.logrotate  larksh.service
docs/: design.md
messaging/: streamer.py
security/: audit.py  guard.py
shell/: __init__.py  executor.py  interactive.py  session.py  session_manager.py  types.py
tools/: verify_docx_fidelity.py
utils/: ansi.py  config.py
